Adjustments on Axios and Components
Adjustments on Axios and Components

--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -23,7 +23,7 @@
         -->
         <title>WebApplication1</title>
     </head>
-    <body>
+    <body id="MainBody">
         <div class="row">
             <div id="root"></div>
         </div>
