--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -21,7 +21,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>WebApplication1</title>
+        <title>React Web App by Aaron</title>
     </head>
     <body id="MainBody">
         <div class="row">
